--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@
                 
             </div>
             <div class="content">
+                <h1> Hello </h1>
+                <h3> This is HTML page Inspector. </h3>
                 <div id="outer" class="test test1 test2">
                     <div id="inner1" class="test test1 test2">foo</div>
                     <div id="inner2">bar</div>
